--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prebuild": "npm run test",
     "build": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "tslint src/**/*.ts test/**/*.spec.ts test/**/*.test.ts",
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test nyc mocha"
   },
